--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -15,7 +15,9 @@ RUN apt-get update && apt-get install -y \
 #    apt-get update && \
 #    apt-get install -y docker-hypriot docker-compose
 RUN apt-get update && \
-    apt-get install -y docker docker-compose
+    apt-get install -y docker && \
+    curl -L "https://github.com/docker/compose/releases/download/1.10.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
+    chmod +x /usr/local/bin/docker-compose
 
 COPY ./wrapdocker /usr/local/bin/wrapdocker
 
