--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
 #    apt-get update && \
 #    apt-get install -y docker-hypriot docker-compose
 RUN apt-get update && \
-    apt-get install -y docker && \
+    apt-get install -y docker-engine && \
     curl -L "https://github.com/docker/compose/releases/download/1.10.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
 
