--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -7,18 +7,24 @@ RUN apt-get update && apt-get install -y \
     ca-certificates \
     curl \
     lxc \
-    iptables
+    iptables \
+    software-properties-common
     
 # Install Docker from hypriot repos
 #RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 37BBEE3F7AD95B3F && \
 #    echo "deb https://packagecloud.io/Hypriot/Schatzkiste/debian/ wheezy main" > /etc/apt/sources.list.d/hypriot.list && \
 #    apt-get update && \
 #    apt-get install -y docker-hypriot docker-compose
+RUN curl -fsSL https://yum.dockerproject.org/gpg | sudo apt-key add - && \
+    sudo add-apt-repository \
+       "deb https://apt.dockerproject.org/repo/ \
+       debian-$(lsb_release -cs) \
+       main"
 RUN apt-get update && \
     apt-get install -y docker-engine && \
     curl -L "https://github.com/docker/compose/releases/download/1.10.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
-
+RUN sudo docker run hello-world
 COPY ./wrapdocker /usr/local/bin/wrapdocker
 
 COPY ./apps /apps
