--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -20,10 +20,9 @@ RUN curl -fsSL https://yum.dockerproject.org/gpg | sudo apt-key add - && \
        "deb https://apt.dockerproject.org/repo/ \
        debian-$(lsb_release -cs) \
        main"
-#RUN apt-get update && \
-#    apt-get install -y docker-engine 
-RUN git clone https://github.com/docker/docker && cd docker && make && make install
-RUN curl -L "https://github.com/docker/compose/releases/download/1.10.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
+RUN apt-get update && \
+    apt-get install -y docker-engine && \
+    curl -L "https://github.com/docker/compose/releases/download/1.10.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
 RUN sudo docker run hello-world
 COPY ./wrapdocker /usr/local/bin/wrapdocker
