--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -21,7 +21,7 @@ RUN curl -fsSL https://yum.dockerproject.org/gpg | sudo apt-key add - && \
        debian-$(lsb_release -cs) \
        main"
 RUN apt-get update && \
-    apt-get install -y docker-engine && \
+    apt-get install -y docker-engine=1.12.5-0~debian-jessie && \
     curl -L "https://github.com/docker/compose/releases/download/1.9.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
 COPY ./wrapdocker /usr/local/bin/wrapdocker
