Fixed ngnix conf

--- a/apps/nginx/nginx.conf
+++ b/apps/nginx/nginx.conf
@@ -29,13 +29,20 @@ http {
     #gzip  on;
 
     include /etc/nginx/conf.d/*.conf;
-}
 
-server {
+  server {
     listen 8080;
     location / {
         proxy_pass http://transmission:9091;
     }
+  }
+}
+
+#server {
+#    listen 8080;
+#    location / {
+#        proxy_pass http://transmission:9091;
+#    }
 
 #    location /blog {
 #        rewrite ^/blog(.*) /$1 break;
