Added openwhisk action container with nginx proxy on :8080/ow

--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -10,6 +10,11 @@ services:
         ports:
             - 8080:8080
 
+    ow:
+        build: ow
+        ports:
+            - 8080:8080
+
     transmission:
         build: transmission
         volumes:
