--- a/apps/nginx/nginx.conf
+++ b/apps/nginx/nginx.conf
@@ -35,6 +35,10 @@ http {
     location / {
         proxy_pass http://transmission:9091;
     }
+    location /ow {
+        rewrite ^/ow(.*) /$1 break;
+        proxy_pass http://ow:8080;
+    }
   }
 }
 
