Remove transmission from ngnix

--- a/apps/nginx/nginx.conf
+++ b/apps/nginx/nginx.conf
@@ -32,12 +32,12 @@ http {
 
   server {
     listen 8080;
-    location / {
-        proxy_pass http://transmission:9091;
-    }
-    location /ow {
-        rewrite ^/ow(.*) /$1 break;
-        proxy_pass http://ow:8080;
+    location /ow1 {
+        rewrite ^/ow1(.*) /$1 break;
+        proxy_pass http://ow1:8080;
+    location /ow2 {
+        rewrite ^/ow2(.*) /$1 break;
+        proxy_pass http://ow2:8080;
     }
   }
 }
