--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -1,30 +1,21 @@
 version: '2'
 
-volumes:
-    downloads:
-    transmission-config:
-
 services:
     nginx:
         build: nginx
         ports:
             - 8080:8080
 
-    ow:
+    ow1:
         build: ow
 
-    transmission:
-        build: transmission
-        volumes:
-            - downloads:/downloads:rw
-            - transmission-config:/config:rw
-        ports:
-            - 9091:9091
-            - 49300:49300
+    ow2:
+        build: ow
 
-    static-server:
-        build: static-server
-        volumes_from:
-            - transmission:rw
+    node-red:
+        build: resin-node-red
         ports:
             - 80:80
+        environment:
+            - USERNAME=${NODE_USERNAME}
+            - PASSWORD=${NODE_PASSWORD}
