fixed node-red service name in compose

--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         build: ow2
 
     node-red:
-        build: resin-node-red
+        build: node-red
         ports:
             - 80:80
         environment:
