Added proxy of port 80 nginx -> node-red

--- a/apps/nginx/nginx.conf
+++ b/apps/nginx/nginx.conf
@@ -41,6 +41,12 @@ http {
         proxy_pass http://ow2:8080;
     }
   }
+  server {
+    listen 80;
+    location / {
+        proxy_pass http://node-red:80;
+    }
+  }
 }
 
 #server {
