--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     nginx:
         build: nginx
         ports:
-            - 80:80
             - 8080:8080
 
     ow1:
@@ -15,6 +14,8 @@ services:
 
     node-red:
         build: node-red
+        ports:
+            - 80:80
         environment:
             - USERNAME=${NODE_USERNAME}
             - PASSWORD=${NODE_PASSWORD}
